--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <nav class="my-2 my-md-0 mr-md-3">
           <a class="p-2 text-dark" href="/">Home page</a>
           <a class="p-2 text-dark" href="/users-list">Users list</a>
-          <!-- <a class="p-2 text-dark" href="/create">Make database</a> -->
+          <a class="p-2 text-dark" href="/create">Make database</a>
           <a class="p-2 text-dark" href="/about">About</a>
         </nav>
         <a class="btn btn-outline-primary" href="/create-user">Create User</a>
